syntax = "proto3";

option go_package = "server/models/gproto";

package gproto;

service Game {
  rpc NewGame(NewGameRequest) returns (NewGameResponse) {}
  rpc Join(JoinRequest) returns (JoinResponse) {}
}

message NewGameRequest {
  string password = 3;
  int32 limitPlayers = 4;
}

message NewGameResponse {
  string code = 2;
  string host = 3;
}

message Player {
  string id = 1;
  string Name = 2;
}

message JoinRequest {
  string host = 1;
  string password = 2;
  Player player = 3;
}

message JoinResponse {
  Player player = 1;
  bool status = 2;
}